--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
 
   http: ^0.12.0+2
-  url_launcher: ^5.1.3
+  url_launcher: ^5.1.4
+  url_launcher_web: ^0.1.0
 
 dev_dependencies:
   flutter_test:
