--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^0.12.0+2
   url_launcher: ^5.1.4
   url_launcher_web: ^0.1.0
+  package_info: ^0.4.0+11
 
 dev_dependencies:
   flutter_test:
